# MovieKit

./: .gitignore  CHANGELOG.md  README.md  compare.py  movie_repository.py  movies.csv  movies.db  pyproject.toml  streaming.py  top10_prime.py  unwatched1001.csv  watched.csv  watched1001.csv
docs/: DEVELOPER_GUIDE.md  MILESTONE_0_3_9.md  MILESTONE_1_5.md
moviekit/: __init__.py
scripts/: compare.py  explore.py  provider_test.py  scrape.py  streaming.py  tmdb_test.py  top10_prime.py
src/moviekit/: __init__.py  bulk_sync_service.py  cli.py  config.py  database.py  database_repository.py  metadata_service.py  models.py  movie_repository.py  provider_backend.py  provider_service.py  recommendation_engine.py  recommendation_service.py  search_service.py  sync_service.py  tmdb_client.py  tmdb_provider_backend.py
src/moviekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bulk_sync_service.py  test_config.py  test_database_repository.py  test_metadata_service.py  test_provider_backend.py  test_provider_service.py  test_recommendation_engine.py  test_search_command.py  test_sync_service.py  test_tmdb_provider_backend.py
